# easy-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml  hourly-holdings.yml  monthly-report.yml  monthly.yml
config/: benchmarks.csv  fund.yml  funds.yml  theme_map.csv  ticker_map.csv
data/: holdings_history.csv  market_price_history.csv  nav_history.csv  nav_price_history.csv  snapshot_log.csv
data/analytics/: active_trade_estimates.csv  concentration_history.csv  contribution_history.csv  decision_scorecard.csv  latest_summary.csv  monthly_changes.csv  theme_exposure.csv  theme_subtheme_exposure.csv  turnover_history.csv
data/prices/: benchmark_prices.csv  easyge_prices.csv  fx_prices.csv  stock_prices.csv
data/raw/easyai/: EASYAI_PCF_ZAR_20260508.csv  EASYAI_PCF_ZAR_20260511.csv  EASYAI_PCF_ZAR_20260512.csv  EASYAI_PCF_ZAR_20260513.csv  EASYAI_PCF_ZAR_20260514.csv  EASYAI_PCF_ZAR_20260515.csv  EASYAI_PCF_ZAR_20260518.csv  EASYAI_PCF_ZAR_20260519.csv  EASYAI_PCF_ZAR_20260520.csv  (+44 more)
reports/: data_quality.md
scripts/: analyse_holdings.py  build_charts.py  build_dashboard.py  build_readme.py  build_report.py  build_site_data.py  fetch_easyge.py  fetch_holdings.py  fetch_market_prices.py  fetch_nav.py  fetch_prices.py  plot_easyge.py  run_local.py  send_report.py  utils.py
site/: chart.html  data.json  data_quality.json  holdings_history.csv  index.html  metrics.json
tests/: test_analytics.py  test_holdings_parser.py  test_market_prices.py  test_nav_parser.py  test_site_data.py  test_ticker_map.py  test_utils.py
(+106 files in other folders)
